--- a/clickstream.conf
+++ b/clickstream.conf
@@ -1,37 +1,33 @@
 input { 
- file {# path for clickstream log
- path =>"/home/rishav.rohit/Desktop/clickstream/_2004_02_01_19_click_stream.log"# define a type for all events handeled by this input
- type =>"weblog"
- start_position =>"beginning"# the clickstream log is in character set ISO-8859-1
- codec => plain {charset =>"ISO-8859-1"}
+ file {
+ path =>"/app/weblog.csv"
+ start_position =>"beginning"
  }
 }
 
 filter {
- csv {# define columns present in weblog
- columns =>[shop_id, unixtime, client_ip, session, page, referrer]
+ csv {
+ columns =>[ip, datetime, url, status]
  separator =>";"
  }
- grok {# get visited page and page parameters
- match =>["page","%{URIPATH:page_visited}(?:%{URIPARAM:page_params})?"]
- remove_field =>["page"]
- }
- date {# as we are getting unixtime field in epoch seconds we will convert it to normal timestamp
- match =>["unixtime","UNIX"]
- }
- geoip {# this will convert ip to longitude-latitude using GeoLiteCity database from Maxmind
- source =>"client_ip"
- fields =>["latitude","longitude"]
- target =>"geoip"
- add_field =>["[geoip][coordinates]","%{[geoip][longitude]}"]
- add_field =>["[geoip][coordinates]","%{[geoip][latitude]}"]
- }
- mutate {# this will convert geoip.coordinates to float values
- convert =>["[geoip][coordinates]","float"]}
- }
-
-output {# store output in local elasticsearch cluster
+if [ip] == "IP" {
+drop {}
+}
+mutate {
+gsub => ["datetime", "^.", ""]
+}
+mutate {
+ convert => {"status" => "integer"}
+}
+date {
+ match => {"datetime" => "dd/MMM/yyyy:HH:mm:ss"}
+ target => "received_at"
+ remove_field => ["datetime"]
+}
+output {
  elasticsearch {
- host =>"127.0.0.1"
+ host => "elasticsearch"
+ index => "event-clickstream"
  }
+stdout { codec => rubydebug }
 }
